--- a/website/apps/admin/view/default/common/head.html
+++ b/website/apps/admin/view/default/common/head.html
@@ -61,11 +61,15 @@
        <li class="layui-nav-item layui-hide-xs">
       	 <a href="{SITE_DIR}/" target="_blank"><i class="fa fa-home" aria-hidden="true"></i> 网站主页</a>
        </li>
-
-       <li class="layui-nav-item layui-hide-xs">
-       		<a href="{url./admin/DeleCache/index}"><i class="fa fa-trash-o" aria-hidden="true"></i> 清理缓存</a>
+       
+        <li class="layui-nav-item layui-hide-xs">
+      	 <a href="{url.//admin/City/index}"><i class="fa fa-university" aria-hidden="true"></i> 城市分站</a>
        </li>
 
+       <li class="layui-nav-item layui-hide-xs">
+       		<a href="{url./admin/Index/clearCache}" class="ajaxlink"><i class="fa fa-trash-o" aria-hidden="true"></i> 清理缓存</a>
+       </li>
+       
        <li class="layui-nav-item layui-hide-xs">
 	        <a href="javascript:;">
 	          <i class="fa fa-user-circle-o" aria-hidden="true"></i> {$session.realname}
@@ -125,7 +129,7 @@
         </li>
         
         <li class="layui-nav-item layui-hide-sm">
-         <a href="{url./admin/DeleCache/index}"><i class="fa fa-trash-o" aria-hidden="true"></i> 清理缓存</a>
+         <a href="{url./admin/Index/clearCache}"><i class="fa fa-trash-o" aria-hidden="true"></i> 清理缓存</a>
         </li>
         
         <li class="layui-nav-item layui-hide-sm">
