--- a/website/template/default/html/comm/foot.html
+++ b/website/template/default/html/comm/foot.html
@@ -1,4 +1,10 @@
 
+<div class="container">
+    推荐城市
+    {pboot:city istop=1}
+    <a href="[city:link]">[city:title]</a>
+    {/pboot:city}
+  </div>
 <div class="footer mt-3 pt-5 border-top text-secondary bg-light">
 	<div class="container">
     	<div class="row pb-5">
