--- a/website/template/default/html/index.html
+++ b/website/template/default/html/index.html
@@ -59,8 +59,8 @@
 			<div class="text-center mt-4 wow fadeInDown" data-wow-delay="1s"><h4><a href="[sort:link]" class="text-secondary fs-14 fs-sm-16">查看更多</a></h4></div>
 	  {/pboot:sort}
     </div>
-</div>-->
-
+</div>
+-->
 <!-- 关于我们 -->
 <div class="bg-light py-5">
     <div class="container">
@@ -87,7 +87,7 @@
       {/pboot:sort}
       
       <div class="row">
-      	{pboot:list scode=2 num=4 order=date}
+      	{pboot:list scode=2 num=40 order=date}
             <div class="col-12 col-lg-6 mb-3 wow fadeInUp" data-wow-delay="500ms">
                 <div class="media mb-3">
                   <div class="media-body">
