--- a/website/apps/admin/view/default/content/site.html
+++ b/website/apps/admin/view/default/content/site.html
@@ -12,7 +12,7 @@
 	  			<div class="layui-form-item">
                      <label class="layui-form-label">站点标题</label>
                      <div class="layui-input-block">
-                     	<input type="text" name="title" value="{$sites->title}" placeholder="请输入站点标题"  class="layui-input">
+                     	<input type="text" name="title" value="{$sites->title}" placeholder="请输入站点标题，格式小写的{xx}：{xx}关键词A_{xx}关键词B"  class="layui-input">
                      </div>
                 </div>
                 
@@ -44,14 +44,14 @@
                 <div class="layui-form-item">
                      <label class="layui-form-label">站点关键字</label>
                      <div class="layui-input-block">
-                     	<input type="text" name="keywords" value="{$sites->keywords}" placeholder="请输入站点关键字"  class="layui-input">
+                     	<input type="text" name="keywords" value="{$sites->keywords}" placeholder="请输入站点关键字，格式小写的{xx}：{xx}关键词A_{xx}关键词B"  class="layui-input">
                      </div>
                 </div>
                 
                 <div class="layui-form-item">
                      <label class="layui-form-label">站点描述</label>
                      <div class="layui-input-block">
-                     	<textarea name="description" placeholder="请输入站点描述" class="layui-textarea">{$sites->description}</textarea>
+                     	<textarea name="description" placeholder="请输入站点描述，格式小写的{xx}：{xx}关键词A_{xx}关键词B，某某某描述" class="layui-textarea">{$sites->description}</textarea>
                      </div>
                 </div>
                 
