--- a/website/template/default/html/comm/head.html
+++ b/website/template/default/html/comm/head.html
@@ -5,6 +5,7 @@
 	<title>{pboot:pagetitle}</title>
 	<meta name="keywords" content="{pboot:pagekeywords}">
 	<meta name="description" content="{pboot:pagedescription}">
+    <meta name="author" content="www.adminbuy.cn" />
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,shrink-to-fit=no">
 	<link rel="stylesheet" href="{pboot:sitetplpath}/bootstrap/css/bootstrap.min.css" >
 	<link rel="stylesheet" href="{pboot:sitetplpath}/font-awesome-4.7.0/css/font-awesome.min.css">
@@ -22,6 +23,10 @@
 	  	<a class="navbar-brand my-1" href="{pboot:sitepath}/">
 	      <img src="{pboot:sitelogo}" class="logo-sm-height"  height="50">
 	    </a>
+		<div class="city">
+			{pboot:if({iscity})}<div>{xx}</div>{else}主站{/pboot:if}
+			<a href="/city.html">【城市列表】</a>
+		</div>
 	    
 	    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	    	<span class="navbar-toggler-icon"></span>
@@ -30,7 +35,7 @@
 	    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 	        <ul class="navbar-nav">
 	       	  <li class="nav-item {pboot:if(0=='{sort:scode}')}active{/pboot:if}">
-				 <a class="nav-link" href="{pboot:sitepath}/" >首页</a>
+				 <a class="nav-link" href="{zong}" >首页</a>
 	          </li>
 	          {pboot:nav num=10 parent=0}
 	              <li class="nav-item {pboot:if('[nav:scode]'=='{sort:tcode}')}active{/pboot:if}">
