--- a/website/template/default/html/comm/page.html
+++ b/website/template/default/html/comm/page.html
@@ -2,13 +2,46 @@
 {pboot:if({page:rows}>0)}
    <nav aria-label="page navigation" class="my-4">
      <div class="pagination justify-content-center">
-     	<a class="page-item page-link" href="{page:index}">首页</a>
-     	<a class="page-item page-link" href="{page:pre}">上一页</a>
+     	<a class="page-item page-link {pboot:2if('{page:current}'==1)}hide{/pboot:2if}" href="{page:index}" >首页</a>
+     	<a class="page-item page-link {pboot:2if('{page:current}'==1)}hide{/pboot:2if}" href="{page:pre}">上一页</a>
       	{page:numbar}<!-- 数字条，小屏幕时自动隐藏-->
-      	<a class="page-item page-link" href="{page:next}">下一页</a>
-      	<a class="page-item page-link" href="{page:last}">尾页</a>
+		  <a class="page-item page-link" href="javascript:;" title="当前页/总页数">{page:current}/{page:count}</a>
+      	<a class="page-item page-link {pboot:2if('{page:current}'=='{page:count}')}hide{/pboot:2if}" href="{page:next}">下一页</a>
+      	<a class="page-item page-link {pboot:2if('{page:current}'=='{page:count}')}hide{/pboot:2if}" href="{page:last}">尾页</a>
      </div>
    </nav>	
 {else}
    	<div class="text-center my-5 text-secondary">未查询到任何数据！</div>
 {/pboot:if}
+
+<style type="text/css">
+.my-4 .hide{
+  display: none;
+}
+
+
+/* ----- 通用PB分页条 ----- */
+.pagebar .pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+.pagination a {
+  background: #fff;
+  border: 1px solid #ccc;
+  color: #333;
+  font-size: 14px;
+  padding: 6px 8px;
+  margin: 0 2px;
+  border-radius: 3px;
+}
+.pagination a:hover {
+  color: #4fc08d;
+  border: 1px solid #4fc08d;
+}
+.pagination a.page-num-current {
+  color: #fff;
+  background: #4fc08d;
+  border: 1px solid #4fc08d;
+}
+</style>
