--- a/website/template/default/html/city.html
+++ b/website/template/default/html/city.html
@@ -10,7 +10,7 @@
             {/php}
 
         </div>
-        {pboot:city istop=1}
+        {pboot:city}
         <dl>
             <dt><a href="[city:home]" class="sheng">[city:title]</a></dt>
             <dd class="shi">
